Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Done
-
6.2.4, 6.3.1
-
-
d86ab16a86 (qt/qtbase/dev) d86ab16a86 (qt/tqtc-qtbase/dev)
Description
It seems DirectFB has not been properly ported to Qt 6 despite being in sources. There are several build errors due to different function signatures like these (6.2.0):
src/plugins/platforms/directfb/qdirectfbblitter.cpp:255:87: error: no matching function for call to 'QTextureGlyphCache::GlyphAndSubPixelPosition::GlyphAndSubPixelPosition(const glyph_t&, QFixed&)' src/plugins/platforms/directfb/qdirectfbinput.cpp:165:83: error: no matching function for call to 'QWindowSystemInterface::handleMouseEvent(QWindow*&, long int&, QPoint&, QPoint&, Qt::MouseButtons&)' src/plugins/platforms/directfb/qdirectfbinput.cpp:176:55: error: no matching function for call to 'QWindowSystemInterface::handleWheelEvent(QWindow*&, long int&, QPoint&, QPoint&, int, Qt::Orientation)'